@@ -573,7 +573,7 @@ table.activity td.title	{padding:0; width:59%;}
 table.activity td.value	{text-align:right; padding:10px 20px 25px 20px; font-size:1.0em; line-height:1.75em; width:20%;}
 table.activity td.count	{text-align:right; padding:10px 20px 0 40px; font-size:1.7em; line-height:1.0em;}
 table.activity td.date	{text-align:right; padding:10px 20px; white-space:nowrap; font-size:1.0em; line-height:1.75em; width:15%;}
-table.activity td.date.missing_date		{width:10%;}
+table.activity td.date.missing_date		{width:10%; min-width:100px;}
 table.activity td.alert_no_iati	{text-align:center; font-size:1.6em; padding:40px; cursor:default;}
 table.activity td span	{display:block; padding:2px 0 3px 0; color:#000; font-size:0.7em; line-height:1.25em; width:100%;}
 table.activity td span.currency {display:inline; line-height:2.5em; padding:0 0 0 5px;}
