@@ -127,7 +127,7 @@ i.valid			{color:#FFF;}
 
 table.pub		{font-size:0.9em; line-height:1.4em; max-width:600px; text-align:right; width:600px;}
 table.pub th	{font-size:1.25em; padding:15px 30px 15px 0; position:-webkit-sticky; position:sticky; top:-5px; background-color:rgba(29,37,80,1); z-index:10;}
-table.pub td	{border-bottom:1px solid #3d4363; padding:15px 35px 15px 0;}
+table.pub td	{border-bottom:1px solid #3d4363; padding:15px 35px 15px 0; font:inherit;}
 table.pub td:first-child, table.pub th:first-child 	{text-align:left; width:290px;}
 table.pub th:nth-child(2)	{width:180px; text-align:right;}
 table.pub th:last-child 	{padding-right:0;}
