@@ -199,6 +199,7 @@ td .currency	{color:#ccc; font-size:10px; line-height:12px;}
 .tab_currency	{box-sizing:border-box; display:inline-block; vertical-align:top; width:60%;}
 .tab_currency	{color:#ccc; font-size:12px; padding-left:30px; text-align:right; width:40%;}
 .tab_currency div {font-size:10px;}
+.tab_text		{word-break:keep-all;}
 
 /*	PROVIDER, RECEIVER ORG	*/
 .type			{background-color:rgba(72,79,86,0.6); border-radius:4px; color:#CCC; font-size:11px; margin:0 auto; margin-left:-5px; padding:2px 4px;}
