@@ -1,3 +1,10 @@
+Development Portal (2020-05-04 shi)
+==============================
+Min-width for missing dates table
+Fix font for dash table column
+Fix word-break for org file budget line
+
+
 Development Portal (2020-04-30 shi)
 ==============================
 Update COVID-19 search text info to include tag
